syntax = "proto3";

option go_package = "./pb";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string accesstoken = 1;
    string refreshtoken = 2;
    string error = 3;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string error = 1;
}

message RefreshRequest {
    string refreshtoken = 1;
}

message RefreshResponse {
    string accesstoken = 1;
    string refreshtoken = 2;
    string error = 3;
}

message DeleteRequest {
    string accesstoken = 1;
}

message DeleteResponse {
    string error = 1;
}

// message GetAll {}

message GetAllResponse {
    repeated string users = 1;
    string error = 2;
}

// message DeleteAll {}

message DeleteAllResponse {
    string error = 1;
}