syntax = "proto3";

option go_package = "./pb";
import "proto/auth_msg.proto";
import "google/protobuf/empty.proto";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc RefreshToken(RefreshRequest) returns (RefreshResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
    rpc GetAll(google.protobuf.Empty) returns (GetAllResponse) {}
    rpc DeleteAll(google.protobuf.Empty) returns (DeleteAllResponse) {}
}