require_relative '../lib/redis.rb'

get '/login' do
  
end

get '/signup' do
  
end

get '/login' do
  
end

get '/refresh' do
    
end

get '/deleteuser' do
      
end

get '/getallusers' do
          
end

get '/deleteallusers' do
            
end

# rpc Login(LoginRequest) returns (LoginResponse) {}
# rpc Register(RegisterRequest) returns (RegisterResponse) {}
# rpc RefreshToken(RefreshRequest) returns (RefreshResponse) {}
# rpc Delete(DeleteRequest) returns (DeleteResponse) {}
# rpc GetAll(google.protobuf.Empty) returns (GetAllResponse) {}
# rpc DeleteAll(google.protobuf.Empty) returns (DeleteAllResponse) {}
